<resources>
    <string name="app_name">Event Calendar Application</string>
    <string name="calendarLeftButton"><![CDATA[<-]]></string>
    <string name="calendarRightButton"><![CDATA[->]]></string>
    <string name="saturdayAndSundayAbbreviation">S</string>
    <string name="fridayAbbreviation">F</string>
    <string name="tuesdayAndThursdayAbbreviation">T</string>
    <string name="wednesdayAbbreviation">W</string>
    <string name="mondayAbbreviation">M</string>
    <string name="addEventContentDescription">The Add New Event Button</string>
    <string name="title_activity_login">activity_login</string>
    <string name="prompt_email">Email</string>`
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_phoneNumber">Phone Number must be exactly 10 digits long</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">activity_settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settingsTitle">Settings</string>

    <!-- Preference Screen -->
    <string name="theme_pref_Title">Dark Theme</string>
    <string name="theme_pref_Description">Switch between Light and Dark Theme</string>
    <string name="SettingsTitle">Settings</string>
    <string name="add_title">Add Title</string>
    <string name="saveButtonTitle">Save</string>
    <string name="all_day_Button_Title">" All-Day"</string>
    <string-array name="first_day_pref_order">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="DoesNotRepeat">Repeat?</string>
    <string name="EveryDay">Every day</string>
    <string name="EveryWeek">Every week</string>
    <string name="EveryMonth">Every month</string>
    <string name="EveryYear">Every year</string>
    <string name="Clock_Image">clock_image</string>
    <string name="repeat_image">Repeat_Image</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="smsScreenDescription">An SMS Message has been sent to the provided phone number. Please enter the provided code below.</string>
    <string name="prompt_sms_code">Enter Code</string>
    <string name="enter">Enter</string>
    <string name="phone_number">Phone Number</string>
    <string name="back">Back</string>
    <string name="return_image_button">Return Image Button</string>
    <string name="save">SAVE</string>
    <string name="add_event">Add Event</string>
    <string name="delete_event_button">Delete Event Button</string>
    <string name="EditMenuButton">Edit</string>
    <string name="editButtonText">Edit</string>
    <string name="deleteButtonText">Delete</string>
    <string name="deleteMenuButton">deleteMenuButton</string>

    <string-array name="repeat_options">
        <item>Does not repeat</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>
</resources>