<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Calendar.View.activity_calendar_month"

    style="@style/primaryBackground"
    tools:ignore="DiscouragedApi">

    <LinearLayout
        android:id="@+id/TopLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/previousMonthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/calendarLeftButton"
            android:onClick="previousMonthClick"
            style="@style/CalendarArrowColorAndSize"
            android:background="@color/transparent"/>

        <TextView
            android:id="@+id/monthAndYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="September 2024"
            android:maxLines="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <Button
            android:id="@+id/nextMonthButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/calendarRightButton"
            android:onClick="nextMonthClick"
            style="@style/CalendarArrowColorAndSize"
            android:background="@color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/BottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopLinearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturdayAndSundayAbbreviation"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mondayAbbreviation"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesdayAndThursdayAbbreviation"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesdayAbbreviation"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesdayAndThursdayAbbreviation"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fridayAbbreviation"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturdayAndSundayAbbreviation"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/BottomLinearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/AddEventButton"
        android:layout_width="100dp"
        android:layout_height="130dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_circle_with_plus_sign"
        android:contentDescription="@drawable/ic_circle_with_plus_sign"
        android:background="@color/transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>