<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addEventActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar.View.updateEventActivity"
    android:orientation="vertical"
    style="@style/primaryBackground">

    <EditText
        android:id="@+id/updateEventTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:hint="@string/add_title"
        android:textSize="40sp"
        android:autofillHints="@string/add_title"
        android:inputType="text"
        />

    <LinearLayout
        android:id="@+id/updateAllDayBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/updateEventTitle">


        <ImageView
            android:id="@+id/updateClockImageButton"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:contentDescription="@string/Clock_Image"
            android:src="@drawable/clock_image"
            android:layout_marginStart="10dp" />
        <TextView
            android:id="@+id/updateAllDayText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_day_Button_Title"
            style="@style/textColorAndSize"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/updateAllDaySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/updateEventTitle"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/updateStartDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sat, Oct 5, 2024"
            style="@style/textColor"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/transparent"
            android:enabled="true"
            android:visibility="visible"
            />

        <EditText
            android:id="@+id/updateStartTimeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="text"
            android:text="5:00 PM"
            style="@style/textColor"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/transparent"
            android:enabled="true"
            android:visibility="visible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/updateEventTitle"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/updateEndDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sun, Oct 6, 2024"
            style="@style/textColor"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/transparent"
            android:enabled="true"
            android:visibility="visible"
            />

        <EditText
            android:id="@+id/updateEndTimeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6:00 PM"
            style="@style/textColor"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/transparent"
            android:enabled="true"
            android:visibility="visible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/updateEventTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="150dp">

        <!--        <ImageButton-->
        <!--            android:id="@+id/repeatImageButton"-->
        <!--            android:layout_width="30dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:contentDescription="@string/repeat_image"-->
        <!--            android:src="@drawable/repeat_image"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            />-->
        <!--        <EditText-->
        <!--            android:id="@+id/repeatEditText"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            android:text="Repeat?"-->
        <!--            android:textStyle="bold"-->
        <!--            android:backgroundTint="@color/transparent"-->
        <!--            style="@style/textColor"-->
        <!--            android:textSize="20sp"-->
        <!--            />-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>